code/deploy/kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openagent
  namespace: openagent
  labels:
    app.kubernetes.io/name: openagent
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: openagent
